--- a/src/app/shell/shell-header/shell-header.component.html
+++ b/src/app/shell/shell-header/shell-header.component.html
@@ -33,8 +33,8 @@
 		</nav>
 
 		<div class="shell-actions d-none d-lg-flex">
-			<button pButton type="button" label="ورود" class="p-button-text header-login"></button>
-			<button pButton type="button" label="ساخت حساب" class="header-cta"></button>
+			<button pButton type="button" label="ورود" routerLink="/auth/login" class="p-button-text header-login"></button>
+			<button pButton type="button" label="ساخت حساب" routerLink="/auth/register" class="header-cta"></button>
 		</div>
 
 		<button
