--- a/src/app/shell/shell-faq/shell-faq.component.html
+++ b/src/app/shell/shell-faq/shell-faq.component.html
@@ -1,11 +1,26 @@
-<section id="faq" revealOnScroll>
-	<div class="container-xl">
-		<h2 class="mb-3">سوالات متداول</h2>
-		<input pInputText type="text" placeholder="جستجو در سوالات..." class="mb-3 w-100" [(ngModel)]="q">
-		<p-accordion [multiple]="true">
-			<p-accordionTab *ngFor="let f of filtered()" [header]="f.q">
-				<p class="m-0 text-secondary">{{f.a}}</p>
-			</p-accordionTab>
-		</p-accordion>
+<section id="faq" revealOnScroll class="py-5">
+	<div class="container d-flex justify-content-center">
+		<p-card styleClass="faq-card w-100">
+			<div class="d-flex justify-content-between align-items-center mb-3">
+				<h2 class="mb-0">سوالات متداول</h2>
+				<i class="fa-regular fa-circle-question fa-lg text-info"></i>
+			</div>
+
+			<span class="p-input-icon-left d-block mb-3">
+				<i class="pi pi-search"></i>
+				<input
+					pInputText
+					type="text"
+					placeholder="جستجو در سوالات..."
+					class="w-100"
+					[(ngModel)]="q"/>
+			</span>
+
+			<p-accordion [multiple]="true">
+				<p-accordionTab *ngFor="let f of filteredFaqs" [header]="f.q">
+					<p class="m-0 text-secondary">{{ f.a }}</p>
+				</p-accordionTab>
+			</p-accordion>
+		</p-card>
 	</div>
 </section>
