--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -13,24 +13,24 @@
 			<label>Password</label>
 			<input pInputText type="password"/>
 		</p-float-label>
-		<button pButton type="submit" label="Register" class="p-button-success mt-2 w-full"></button>
+		<button pButton type="submit" label="Register" class="p-button-gold mt-2 w-100"></button>
 	</div>
 </form>
 
 <div class="divider"><span>OR</span></div>
 
-<div class="row row-cols-4">
+<div class="d-flex justify-content-center flex-wrap gap-2 social-login-group">
 	<div class="col-auto">
-		<button pButton icon="fas fa-google" class="p-button-danger w-full mb-2"></button>
+		<button pButton icon="fas fa-google" class="p-button-danger  mb-2"></button>
 	</div>
 	<div class="col-auto">
-		<button pButton icon="fas fa-github" class="p-button-secondary w-full mb-2"></button>
+		<button pButton icon="fas fa-github" class="p-button-secondary  mb-2"></button>
 	</div>
 	<div class="col-auto">
-		<button pButton icon="fas fa-facebook" class="p-button-info w-full mb-2"></button>
+		<button pButton icon="fas fa-facebook" class="p-button-info  mb-2"></button>
 	</div>
 	<div class="col-auto">
-		<button pButton icon="fas fa-apple" class="p-button-dark w-full"></button>
+		<button pButton icon="fas fa-apple" class="p-button-dark "></button>
 	</div>
 </div>
 
