--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,6 +1,6 @@
 /* src/app/pages/dashboard-classic/dashboard-classic.component.scss */
 .dashboard-ux {
-	background: #f6f8fb;
+	//background: #f6f8fb;
 	padding: 12px;
 }
 
