--- a/src/app/auth/ssoregister/ssoregister.component.html
+++ b/src/app/auth/ssoregister/ssoregister.component.html
@@ -1,14 +1,17 @@
 <h3 class="text-center mb-3">Complete Registration</h3>
 <form>
 	<div class="p-fluid">
-		<div class="field">
-			<label>Username</label>
-			<input pInputText/>
+		<p-float-label variant="in" class="mt-3">
+			<label for="username">Username</label>
+			<input pInputText id="username"/>
+		</p-float-label>
+
+		<p-float-label variant="in" class="mt-3">
+			<label for="email">Email (optional)</label>
+			<input pInputText id="email" type=""/>
+		</p-float-label>
+		<div class="my-3 mb-4">
+			<button pButton type="submit" label="Finish Registration" class="p-button-success w-100"></button>
 		</div>
-		<div class="field">
-			<label>Email (optional)</label>
-			<input pInputText type="email"/>
-		</div>
-		<button pButton type="submit" label="Finish Registration" class="p-button-success w-full"></button>
 	</div>
 </form>
